<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/payment_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="-10dp"
        android:layout_weight="0.32"
        android:background="@drawable/payment_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/payment_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="Username"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/payment_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/fakeuser" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingVertical="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Total Quantity"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/payment_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your Total"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/payment_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rs 2000"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/payment_string"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"


            />

        <RadioGroup
            android:id="@+id/payment_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/payment_credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat"
                android:paddingVertical="15dp"
                android:text="@string/credit_card"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_selector"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/payment_debit"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat"
                android:paddingVertical="15dp"
                android:text="@string/debit_card"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_selector"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/payment_upi"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat"
                android:paddingVertical="15dp"
                android:text="@string/upi"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_selector"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/payment_net"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="12dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="5dp"
                android:fontFamily="@font/montserrat"
                android:paddingVertical="@dimen/btn_vertical_padding"
                android:text="@string/net_banking"
                android:textAlignment="center"
                android:textColor="@drawable/radio_text_selector"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/payment_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@color/colorAccentDark"
        android:paddingVertical="@dimen/btn_vertical_padding"
        android:text="@string/checkout"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>